# libvalgrind_request

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js  valgrind.rs
.travis/docs/: after_success
examples/: am_i_on_valgrind.rs
src/: abi.rs  lib.rs  main.rs
src/arch/: aarch64.rs  arm.rs  mod.rs  x86.rs  x86_64.rs
src/valgrind_request/: abi.rs.html  lib.rs.html
src/valgrind_request/arch/: mod.rs.html  x86_64.rs.html
valgrind_request/: enum.ClientRequest.html  fn.count_errors.html  fn.discard_translations.html  fn.do_client_request.html  fn.running_on_valgrind.html  fn.stack_change.html  fn.stack_deregister.html  fn.stack_register.html  index.html  type.Value.html
