[package]
name = "valgrind_request"
version = "1.1.0"
description = "wrapper for Valgrind client requests"
authors = ["edef <edef@edef.eu>"]
license = "Zlib"
homepage = "https://github.com/edef1c/libvalgrind_request"
repository = "https://github.com/edef1c/libvalgrind_request"
documentation = "https://edef1c.github.io/libvalgrind_request"
